Frontend/src/assets/styles/cmps/_GigFilter.scss
.gig-results-title {
  display: grid;
  .search-param {
    h1 {
      font-size: rem(28px);
      font-family: macan-light;
      font-weight: 400;
      line-height: 36px;
      color: #222325;
      padding-bottom: 12px;
      padding-top: 32px;
    }
  }
  .explore-category {
    padding: 1.25em 0 0.75em 0;
    color: $clrSecondary8;

    Link {
      padding: rem(9px);
    }

    .divider {
      color: $clrSecondary45;
      margin: 0 0.5em;
    }
  }
}
.gig-filter {
  position: sticky;
  z-index: 13;
  top: 0;
  width: 100%;
  background-color: #fff;

  .floating-top-bar {
    margin-block-start: 1em;
    .filter-nav {
      padding: 0 2em;
      display: flex;

      .btn {
        span {
          i {
            transition: all 0.24s cubic-bezier(0.215, 0.61, 0.355, 1);
          }
        }
      }
    }
  }

  &::after {
    content: '';
    display: block;
    height: 1em;
    width: 100%;
    background-color: #fff;
    box-shadow: 0 9px 20px -13px #74767ed9;
  }
}
// .gig-filter::after {
//   content: '';
//   display: block;
//   height: 1em;
// }

